[package]
name = "codius-sandbox-core"
version = "0.0.1"
authors = ["Torrie Fischer <torrie@ripple.com>"]

[dependencies.seccomp]
git = "git://github.com/codius/rust-seccomp"

[dependencies]
log = "0.2"
ptrace = "0.0.3"
bitflags = "0.1"
posix-ipc = "0.0.2"

[lib]
name = "codius-sandbox-core"

[[bin]]
name = "codius-smoke-test"
